feat: `alpha8` of engine on top of jdk22
- fix: longstanding issue with ruby encodings
- chore: drop embedded language resources
- chore: regenerate runtime language configs
- chore: upgrade to gvm latest (`24.0.1`)

Signed-off-by: Sam Gammon <sam@elide.ventures>